# licensify

./: .gitignore  README.md  docker-compose.yml
apps/absatzkalkulation/: README.md  build.py  config.py  main.py  requirements.txt
apps/absatzkalkulation/data/: __init__.py  data_manager.py  parquet_store.py  schema_manager.py
apps/absatzkalkulation/ui/: data_page.py  theme.py
apps/absatzkalkulation/utils/: __init__.py  license_manager.py
backend/: .env.example  .gitignore  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  limiter.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  device.py  device_activity.py  email_token.py  license.py  product.py  revenue.py  user.py
backend/app/schemas/: __init__.py  auth.py  device.py  license.py  product.py  revenue.py  user.py
backend/app/services/: __init__.py  device_service.py  email_service.py  license_service.py  product_service.py  revenue_service.py  user_service.py
backend/frontend/: Dockerfile
backend/frontend/src/: App.jsx  index.css  main.jsx
backend/migrations/: 003_add_products.sql
frontend/: .env.example  .gitignore  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  LicenseDetailPage.jsx  LicensesPage.jsx  LoginPage.jsx  ProductsPage.jsx  (+2 more)
licensify/: .gitignore  README.md  pyproject.toml
licensify/licensify/: __init__.py  cache.py  client.py  config.py  device.py  exceptions.py  utils.py
test-app/: README.md  gui_test.py  main.py
test-app/.license_cache/: license_cache.json
(+42 files in other folders)
