[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licensify"
version = "1.0.0"
description = "Python client library for License Manager - validate licenses in your Python applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "License Manager Team", email = "support@license-manager.com"}
]
keywords = ["license", "licensing", "validation", "software-licensing", "license-manager"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/license-manager/licensify"
Documentation = "https://license-manager.com/docs/python"
Repository = "https://github.com/license-manager/licensify"
Issues = "https://github.com/license-manager/licensify/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["licensify*"]
